<resources>
    <string name="app_name">MyMedicalApp</string>
    <string name="loginbtn">Login</string>
    <string name="loginImg">TODO</string>
    <string name="loginpassword">Password</string>
    <string name="login_email_address">Email Address</string>
    <string-array name="medical_department_array">
        <item>Choose one</item>
        <item>Cardiology</item>
        <item>Orthopedy</item>
        <item>Dermatology</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="question_text">Question</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_no">No Repeat</string>
    <string name="repeat_type">Repeat type</string>
    <string name="quantity">Quantity</string>
    <string name="detail_select_symptom">Please select your symptoms in order to provide you an answer</string>
    <string name="evaluate_symptoms">Evaluate symptoms</string>
</resources>
