<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/add_reminder_layout_top"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_height="100dp">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/reminder_title"
            android:layout_marginStart="72dp"
            android:hint="Reminder Title"
            android:textSize="25sp"
            android:gravity="center|start"
            android:textColor="@android:color/white"
            android:scrollHorizontally="false"
            android:textColorHint="@android:color/white"
            android:inputType="textCapWords|textMultiLine"
            android:layout_marginEnd="16dp"
            android:layout_height="100dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_below="@id/add_reminder_layout_top"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/details"
                android:id="@+id/details"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:layout_marginStart="80dp"
                android:layout_height="72dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/quantity"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/quantity_icon"
                    android:layout_width="34dp"
                    android:layout_height="42dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_quantity_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/quantity_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/details_text"
                        android:layout_width="wrap_content"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:id="@+id/set_quantity"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setDate"
                android:id="@+id/date"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_view_day_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/date_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="@string/date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_date"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setTime"
                android:id="@+id/time"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_access_time_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/time_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="@string/time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_time"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/repeat"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_sync_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/repeat_ll"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:layout_width="wrap_content"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:onClick="onSwitchRepeat"
                    android:checked="true"
                    android:textOn="On"
                    android:textOff="Off"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatNo"
                android:clickable="true"
                android:onClick="setRepeatNo"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_unfold_more_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_no_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:layout_width="wrap_content"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat_no"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/RepeatType"
                android:clickable="true"
                android:onClick="selectRepeatType"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_subject_grey600_24dp"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_type_icon"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:layout_width="wrap_content"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/set_repeat_type"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/check_alarm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_check_white_24dp"
                     />

                <ImageButton
                    android:id="@+id/delete_alarm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_delete_white_24dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab1"
        app:srcCompat="@drawable/ic_notifications_off_grey600_24dp"
        app:fab_colorPressed="#546e7a"
        app:fab_size="normal"
        android:layout_alignParentStart="true"
        android:layout_marginTop="68dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab2"
        app:srcCompat="@drawable/ic_notifications_on_white_24dp"
        app:fab_colorPressed="#546e7a"
        app:fab_size="normal"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="68dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"/>

</RelativeLayout>